--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="description" content="Your description goes here">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="keywords" content="one, two, three">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	<title class="ttl">Countdown Timer</title>
 
 	<!-- external CSS link -->
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
+	
+	<title class="ttl">Countdown Timer</title>
 </head>
 
 <body>
