--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 				<p>:</p>
 				<input class="itime s" type="number" placeholder="SS" alt="Seconds" title="Seconds" value="00">
 			</form>
-			<button class="start">Start</button>
-			<button class="pause p-hidden">Pause</button>
-			<button class="reset hide-reset">Reset</button>
+			<button id="start" class="start">Start</button>
+			<button id="pause" class="pause p-hidden">Pause</button>
+			<button id="reset" class="reset hide-reset">Reset</button>
 		</div>
 		<div class="second-field">
 			<input type="text" class="msg" placeholder="Timer's message!">
