--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<p>:</p>
 				<input class="itime s" type="number" placeholder="SS" alt="Seconds" title="Seconds" value="00">
 			</form>
-			<button id="start" class="start" ontouchend="work">Start</button>
+			<button id="start" class="start">Start</button>
 			<button id="pause" class="pause p-hidden">Pause</button>
 			<button id="reset" class="reset hide-reset">Reset</button>
 		</div>
