--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 		<h1>Countdown Timer</h1>
 
 		<div class="time">
-			<form class="time-form">
+			<div class="time-form">
 				<input class="itime h" type="number" placeholder="HH" alt="Hour" title="Hours" value="00">
 				<p>:</p>
 				<input class="itime m" type="number" placeholder="MM" alt="Minutes" title="Minutes" value="00">
 				<p>:</p>
 				<input class="itime s" type="number" placeholder="SS" alt="Seconds" title="Seconds" value="00">
-			</form>
+			</div>
 			<button id="start" class="start">Start</button>
 			<button id="pause" class="pause p-hidden">Pause</button>
 			<button id="reset" class="reset hide-reset">Reset</button>
