--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				<input class="itime s" type="number" placeholder="SS" alt="Seconds" title="Seconds" value="00">
 			</div>
 			<button id="start" class="start">Start</button>
-			<button id="pause" class="pause p-hidden">Pause</button>
-			<button id="reset" class="reset hide-reset">Reset</button>
+			<button id="pause" class="p-hidden">Pause</button>
+			<button id="reset" class="hide-reset">Reset</button>
 		</div>
 		<div class="second-field">
 			<input type="text" class="msg" placeholder="Timer's message!">
