--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!-- external CSS link -->
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
-	
+
 	<title class="ttl">Countdown Timer</title>
 </head>
 
@@ -19,19 +19,24 @@
 
 		<div class="time">
 			<div class="time-form">
-				<input class="itime h" type="number" placeholder="HH" alt="Hour" title="Hours" value="00">
-				<p>:</p>
-				<input class="itime m" type="number" placeholder="MM" alt="Minutes" title="Minutes" value="00">
-				<p>:</p>
-				<input class="itime s" type="number" placeholder="SS" alt="Seconds" title="Seconds" value="00">
+				<div class="timeInputs">
+					<input class="itime h" type="number" placeholder="HH" alt="Hour" title="Hours" value="00">
+					<p>:</p>
+					<input class="itime m" type="number" placeholder="MM" alt="Minutes" title="Minutes" value="00">
+					<p>:</p>
+					<input class="itime s" type="number" placeholder="SS" alt="Seconds" title="Seconds" value="00">
+				</div>
+				<div class="btns">
+					<button id="start" class="start">Start</button>
+					<button id="pause" class="p-hidden">Pause</button>
+					<button id="reset" class="hide-reset">Reset</button>
+				</div>
 			</div>
-			<button id="start" class="start">Start</button>
-			<button id="pause" class="p-hidden">Pause</button>
-			<button id="reset" class="hide-reset">Reset</button>
-		</div>
-		<div class="second-field">
-			<input type="text" class="msg" placeholder="Timer's message!">
-			<button class="notification">Enable notifications!</button>
+
+			<div class="second-field">
+				<input type="text" class="msg" placeholder="Timer's message!">
+				<button class="notification">Enable notifications!</button>
+			</div>
 		</div>
 
 	</main>
